# Ray-Tracing

./: .gitignore  CMakeLists.txt  README.md
images/: 10_gamma_corrected.ppm  11_shiny_metal.ppm  12_fuzzed_metal.ppm  13_glass_sphere_that_always_refracts.ppm  14_air_bubble.ppm  15_hollow_glass_sphere.ppm  16_wide_angle_view.ppm  17_distant_view.ppm  18_zoom_in.ppm  19_spheres_with_depth_of_field.ppm  21_bouncing_spheres.ppm  6_antialiasing.ppm  7_first_render_of_diffuse_sphere.ppm  8_diffuse_sphere_no_shadow_acne.ppm  9_Lambertian_spheres.ppm
src/InOneWeekend/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.c  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
src/TheNextWeek/: camera.h  interval.h  main.c  material.h  ray.h  sphere.h  vec3.h
